--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.27",
-    "uuidv4": "^6.2.3"
+    "uuidv4": "^6.2.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
